--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
             <div class="title">Awesome Quiz Application</div>
             <div class="timer">
                 <div class="time_left_txt">Time Left</div>
-                <div class="timer_sec">15</div>
+                <div class="timer_sec">60</div>
             </div>
             <div class="time_line"></div>
         </header>
+        <main>
+    <div id="initials-wrapper" class="quiz-content">
+      <form id="initials-form" class="initials-form"></form>
+        </div>
+        </main>
         <section>
             <div class="que_text">
                 <!-- Here I've inserted question from JavaScript -->
