--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <div class="info_box">
         <div class="info-title"><span>Some Rules of this Quiz</span></div>
         <div class="info-list">
-            <div class="info">1. You will have only <span>15 seconds</span> per each question.</div>
+            <div class="info">1. You will have only <span>60 seconds</span> per each question.</div>
             <div class="info">2. Once you select your answer, it can't be undone.</div>
             <div class="info">3. You can't select any option once time goes off.</div>
-            <div class="info">4. You can't exit from the Quiz while you're playing.</div>
+            <div class="info">4. You can't exit from QuikQuiz while you're playing.</div>
             <div class="info">5. You'll get points on the basis of your correct answers.</div>
+            <div class="info">6. You'll get deducted time <span>5 seconds</span> per every wrong answer.</div>
         </div>
         <div class="buttons">
             <button class="quit">Exit Quiz</button>
@@ -31,7 +32,7 @@
     <!-- Quiz Box -->
     <div class="quiz_box">
         <header>
-            <div class="title">Awesome Quiz Application</div>
+            <div class="title">QuikQuiz</div>
             <div class="timer">
                 <div class="time_left_txt">Time Left</div>
                 <div class="timer_sec">60</div>
@@ -67,6 +68,18 @@
         <div class="complete_text">You've completed the Quiz!</div>
         <div class="score_text">
             <!-- Here I've inserted Score Result from JavaScript -->
+            
+        </div>
+        <div class="initalsText">
+            <!-- Here I've inserted Score Result from JavaScript -->
+            <div class="previousScores">
+                
+            </div>
+            <form id="highscore">
+                <label for="initals">initals</label><br>
+                <input type="text" id="initals" name="initals"><br><br>
+                <input type="submit" value="Submit">
+              </form> 
         </div>
         <div class="buttons">
             <button class="restart">Replay Quiz</button>
