function is on the way to being functional

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     </div>
     <script>
         const element = document.getElementById("SubmitHighScore");
-        element.addEventListener("click", function() {
-          document.getElementById("SubmitHighScore").innerHTML = "Nice Score!";
+        element.addEventListener("click",submitHighScore, function() {
+          document.getElementById(".className").innerHTML = "Nice Score!";
         });
         </script>
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
